// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`latLng , 16.413690 throws an error 1`] = `
"coordinates must contain lat/lng coordinates formatted xx.xxxxxx, xx.xxxxxx

   Line | Content
 >    1 | coordinates: , 16.413690
"
`;

exports[`latLng 48,205870, 16,413690 throws an error 1`] = `
"coordinates must contain lat/lng coordinates formatted xx.xxxxxx, xx.xxxxxx

   Line | Content
 >    1 | coordinates: 48,205870, 16,413690
"
`;

exports[`latLng 48.205870, throws an error 1`] = `
"coordinates must contain lat/lng coordinates formatted xx.xxxxxx, xx.xxxxxx

   Line | Content
 >    1 | coordinates: 48.205870,
"
`;
